--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "firebase": "^10.13.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.6.1",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +24,8 @@
     "sweetalert2": "^11.13.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
